--- a/css/QA.css
+++ b/css/QA.css
@@ -7,7 +7,7 @@ section{
     margin:0px auto 100px;
 }
 section .libar{
-    max-width: 900px;
+    max-width: 800px;
     margin: auto;
     margin-bottom: 0.5rem;
 }
@@ -148,9 +148,12 @@ section{
     width: 90%;
 }
 section ul{
+    width: 100%;
     max-width: 600px;
     padding:0px ;
+    margin: auto;
 }
+section .libar{width: 100%;}
 .env{
     width: 80%;
 }
