--- a/css/about.css
+++ b/css/about.css
@@ -22,7 +22,7 @@ main{
     color: #2C6E00;
     font-size: 18px;
     min-width: 50px;
-    text-wrap: nowrap;
+    white-space: nowrap;
 }
 .price table tr{
     border-bottom: 1px dashed #2C6E00;
@@ -72,10 +72,8 @@ tr td:nth-child(2){
 .map .pin input{
     position: absolute;
 }
-.map .pin input:checked{
-    display: block;
-}
 .map .pin input:checked::after{
+    z-index: 2;
     transform-origin:center;
     animation:pin .7s 0s linear infinite alternate;
 }
@@ -90,17 +88,13 @@ tr td:nth-child(2){
     font-size: 1rem;
     font-weight: 700;
     width: 100px;
-    height: 20px;
     text-align: center;
     top: -30px;
     right: -50px;
     position: absolute;
     text-shadow: 2px 2px 2px #fff,-2px -2px 2px #fff,2px -2px 2px #fff,-2px 2px 2px #fff;
 }
-.map .pin input#ground{
-    bottom:45%;
-    right: 33%;
-}
+
 .map .pin input#ground::before{
     content: "羊羊廣場";
 }
@@ -108,16 +102,13 @@ tr td:nth-child(2){
     content: "山羊羊舍";
 }
 .map .pin input#diy::before{
-    content: "手作教室";
+    content: "起司研究室";
 }
 .map .pin input#kit::before{
     content: "手作廚房";
 }
-.map .pin input#ground::before{
-    content: "羊羊廣場";
-}
 .map .pin input#cheese::before{
-    content: "起司研究室";
+    content: "手作教室";
 }
 .map .pin input#bq::before{
     content: "烤肉帳篷";
@@ -128,13 +119,17 @@ tr td:nth-child(2){
 .map .pin input#center::before{
     content: "遊客服務中心";
 }
+.map .pin input#ground{
+    bottom:40%;
+    right: 33%;
+}
 .map .pin input#house{
     bottom:63%;
     right: 70%;
 }
 .map .pin input#diy{
     top:21%;
-    right: 20%;
+    right: 18%;
 }
 .map .pin input#kit{
     top:23%;
@@ -145,15 +140,15 @@ tr td:nth-child(2){
     right: 46%;
 }
 .map .pin input#bq{
-    bottom:57%;
-    left: 15%;
+    bottom:50%;
+    left: 10%;
 }
 .map .pin input#market{
     top:22%;
-    left: 10%;
+    left: 12%;
 }
 .map .pin input#center{
-    bottom:40%;
+    bottom:38%;
     left: 23%;
 }
 .map .pin input::after{
@@ -187,113 +182,135 @@ tr td:nth-child(2){
     margin-right: 5px;
 }
 .history{
+    width: 83.33%;
     margin: 0 auto 150px auto;
 }
 .history .block{
     position: relative;
     margin-bottom: 1.5rem;
 }
+.history .block:last-child{
+    max-width: 800px;
+    margin: auto;
+}
 .history .block img{
     display: block;
     border-radius: 10px;
+    object-fit: cover;
 }
-.history .block .col-10{
+.history .block .top{
+    width: 100%;
     margin: auto;
 }
-.history .block .col-7{
+.history .block .mid{
+    width: 50%;
     margin-left: auto;
+    min-height: 260px;
+    max-height:320px ;
+}
+.history .block .but{
+    width: 55%;
+    min-height: 260px;
+    max-height:320px ;
 }
 .history .block .logo{
     width: 60%;
     position: absolute;
     right: 10%;
+    z-index: 2;
 }
 .history .block .txt{
     text-align: center;
     position: absolute;
-    width: 50%;
+    min-width: 50%;
     background:no-repeat center url("../back/cloud2.png");
     background-size:contain ;
-    right: 0;
     bottom: 0;
     padding: 70px 50px 20px;
+    
+}
+.history .block:nth-child(1) .txt{
+    right: 0;
 }
 .history .block:nth-child(2) .txt{
     left: 0;
 }
 .history .block:nth-child(3) .txt{
-    right: 10%;
-    padding: 60px 70px 20px;
+    right: 0;
 }
 .history .block .txt h3{
     margin-bottom: 1rem;
 }
 .history .block .txt p{
     margin: auto;
-    width: 70%;
+    max-width: 300px;
     line-height: 1.5rem;
+    
 }
 .story{
+    width: 90%;
     margin: 0 auto 150px auto;
     display: flex;
     height: 450px;
     position: relative;
+    justify-content: center;
 }
 .time{
+    width: 20%;
+    min-width: 155px;
     display:flex ;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-evenly;
+    margin-right: 1rem;
 }
-.time a{
-    height: 90px;
-    line-height: 90px;
+.time button{
+    cursor: pointer;
+    height: 80px;
     vertical-align: bottom;
     font-size: 1.2rem;
-    position: relative;
-    
+    border: none;
+    background-color: transparent;
 }
-.time a p{
+
+.time button p{
+    width: 65%;
+    padding: 0 0.5rem;
     display: inline-block;
     background-color: #fff;
     border-radius: 45px;
-    line-height: 40px;
+    line-height: 50px;
+    vertical-align: middle;
+    margin-bottom: 15px;
+    transition: .2s;
 }
-.time a::after{
-    content: "";
-    position: absolute;
-    width: 0px;
-    border:0px;
-    bottom: 10px;
-    left: 50px;
-    transition: width .5s,border 0s;
-    z-index: -1;
+.time button.click p{
+    background-color: #2C6E00;
+    color: #fff;
 }
-.time a:hover::after{
-    width: 50%;
-    border:2px dashed #2C6E00;
-}
-.time a img{
+.time button img{
     height: 100%;
-    width: 30%;
+    width: 35%;
     object-fit: contain;
     vertical-align: bottom;
 }
 .window{
+    width: 80%;
     display: flex;
-    overflow-x:hidden;
+    overflow:hidden;
     scroll-behavior: smooth;
 }
 .window::-webkit-scrollbar {
     display: none;
 }
 .window .page{
-    height: 100%;
     width: 100%;
     background:no-repeat center url("../back/cloud2.png");
     background-size: contain;
     flex-shrink: 0;
-    padding:15%;
-    margin-right: 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 .window:target::before {
     content: "";
@@ -303,23 +320,25 @@ tr td:nth-child(2){
   }
 .window .page h3{
     text-align: center;
-    margin-bottom: 2rem;
+    margin-bottom: 1rem;
 }
 .window .page p{
     line-height: 1.4rem;
     padding-left:16px;
 }
 .window .page .txt{
-    width: 100%;
-    height:100%;
+    max-width: 500px;
+    width: 70%;
     display: flex;
+    align-items: center;
 }
 .window .page .txt img{
-    width: 40%;
-    height:100%;
+    max-height: 200px;
     object-fit: cover;
     border-radius: 10px;
+    aspect-ratio: 3/4;
 }
+
 .photo{
     width: 83.33%;
     margin: auto;
@@ -343,7 +362,6 @@ tr td:nth-child(2){
     grid-row:2/4 ;
 }
 .map .btngroup::-webkit-scrollbar {
-
     width: 7px;
 
   }
@@ -363,6 +381,9 @@ tr td:nth-child(2){
   }
   
 @media screen and (max-width:768px){
+    .price table{
+        width: 90%;
+    }
     .map{
         flex-direction: column;
     }
@@ -380,39 +401,100 @@ tr td:nth-child(2){
     }
     .map .pin input::after{
         width: 40px;
-        height: 40px;}
-    .map .pin input::before{
-        font-size: 0.9rem;
+        height: 40px;
     }
+    .map .pin input::before{
+        width: 90px;
+        font-size: 0.9rem;
+        right: -40px;
+    }     
     @keyframes pin{
         0%{transform: scale(0.7);
         }
-        100%{transform:scale(1.2);
+        100%{transform:scale(1.15);
            }
     }
     .story{
+        width: 95%;
         flex-direction: column;
     }
     .story .time{
         width: 100%;
         flex-direction: row;
         justify-content: space-between;
+        margin: 0;
     }
-    .story .time a{
+    .story .time button{
         width: 25%;
         text-align: center;
-        height: 50px;
-        line-height: 50px;
+        margin-bottom: 1rem;
+    }
+    .story .time button img{
+        vertical-align: top;
     }
     .story .window{
         width: 100%;
     }
+    .time button p{
+        width: 4rem;
+        padding: 0.5rem;
+        border-radius: 45px;
+        line-height: 1.5rem;
+    }
+    .window {
+        height: 100%;
+    }
+    .window .page{
+        background-size: 100% 95%;
+    }
+    .window .page .txt{
+        width: 70%;
+    }
+    .window .page .txt img{
+        display: block;
+        width:40%;
+        min-height:190px;
+        max-height: none;
+        aspect-ratio: auto;
+    }
     .window .page h3{
+        max-width: 440px;
         margin-bottom: 1rem;
     }
     .window .page p{
         line-height: 1.3rem;
         padding-left:1rem;
+    }
+    .history .block .txt{
+        width: 60%;
+        background-image: none;
+        background-color:rgb(255, 255, 255,.5);
+        padding: 1.5rem 0.5rem;
+        line-height: 1.25px;
+        border-radius: 10px;
+    }
+    .history .block:first-child .txt{
+        width: 90%;
+        background-color:transparent
+    }
+    .history .block:first-child .txt h3{
+        text-shadow: -3px -3px 3px #fff,3px 3px 3px #fff,3px -3px 3px #fff,-3px 3px 3px #fff;
+    }
+    .history .block:first-child .txt p{
+        max-width: none;
+        text-shadow: -3px -3px 3px #fff,3px 3px 3px #fff,3px -3px 3px #fff,-3px 3px 3px #fff;
+    }
+    .history{
+        width: 95%;
+    }
+    .history .block .top{
+        min-height: 300px;
+        object-position: left
+    }
+}
+@media screen and (max-width:450px){
+    .time button img{
+        display: none;
     }
 }
 @media screen and (max-width:400px){
@@ -422,21 +504,54 @@ tr td:nth-child(2){
     .price table :is(thead th,tr td):first-child,.price table tr td i{
         display: none;
     }
-
+    .map .btngroup{
+        width: 95%;
+    }
     .pin{
         margin: auto;
+        width: 75vh;
+        height: 100vw;
+        transform-origin:left bottom;
+        transform: rotate(90deg) translateX(-75%);
+    }
+    .pin img{
+        width: 75vh;
+        height: 100vw;
+    }
+    .map .pin input#cheese{
+        top:12%;
+        right: 46%;
+    }
+    .map .pin input{
+        transform: rotate(-90deg) ;
+    }
+    .story{
         width: 100%;
-        height: 100vh;
-        transform-origin: ;
-        transform: rotate(90deg);
-        height: 100%;
     }
     .story .time{
         flex-wrap: wrap;
     }
-    .story .time a{
-        margin-bottom: 1rem;
-        width: 50%;
+    .history .block .txt p{
+        text-align:justify;
+    }
+    .history .block:first-child .txt{
+        width: 100%;
+        padding: 0px 0px 10px;
+    }
+    .history .block:first-child .txt p{
+        width: 95%;
+    }
+    .history .block:first-child .top{
+        height: 100%;
+    }
+    .history .block{
+        height: 55vh;
+    }
+    .history .block:first-child{
+        height: 70vh;
+    }
+    .time{
+        width: 100%;
     }
     .photo{
         width: 93%;
