--- a/css/about.css
+++ b/css/about.css
@@ -365,26 +365,29 @@ tr td:nth-child(2){
 .photobox{
     display: none;
     background-color: rgba(241, 241, 241, 0.8);
-    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
+                backdrop-filter: blur(5px);
     position: fixed;
     width: 100vw;
     height: 100vh;
     top: 0;
     left: 0;
     z-index: 25;
-    padding: 5%;
+    padding:10% 5% 5%;
 }
 .photobox .centerphoto{
     margin: auto;
     display: block;
-    width: 80%;
-    height: 80%;
+    width: 70%;
+    max-width: 750px;
+    height: 60%;
+    min-height: 300px;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 .photobox .centerphoto img{
-    width: 90%;
+    width: 100%;
     height: 100%;
     object-fit: cover;
     border-radius: 10px;
@@ -395,7 +398,7 @@ tr td:nth-child(2){
     height: 18%;
     margin-top: 1.5rem;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
 }
 .photobox i{
     position: absolute;
@@ -407,9 +410,11 @@ tr td:nth-child(2){
 }
 .photobox .wrap .small{
     display: inline-block;
-    width: 15%;
+    width: 100px;
     border-radius: 10px;
     cursor: pointer;
+    object-fit: cover;
+    margin: 5px;
 }
 .map .btngroup::-webkit-scrollbar {
     width: 7px;
@@ -541,7 +546,34 @@ tr td:nth-child(2){
         object-position: left
     }
     .photo{
-        width: 90%;}
+        width: 90%;
+    }
+    .photobox .wrap{
+        max-width: 80%;
+        justify-content:start;
+        overflow-y: hidden;
+        overflow-x: scroll;
+    }
+    .photobox .wrap .small{
+        width: 100px;
+    }
+    .photobox .wrap::-webkit-scrollbar {
+        width: 7px;
+      }
+    .photobox .wrap::-webkit-scrollbar {
+        width: 10px;
+        height: 10px;
+        background-color: #fff;
+        border-radius: 4px;
+      }
+    .photobox .wrap::-webkit-scrollbar-track {
+        background: #fff;
+        border-radius: 4px;
+    }
+    .photobox .wrap::-webkit-scrollbar-thumb {
+        background: #90B44B;
+        border-radius: 4px;
+    }
 }
 @media screen and (max-width:450px){
     .time button img{
@@ -617,4 +649,12 @@ tr td:nth-child(2){
         grid-column:1/3 ;
         grid-row:4/5;
     }
+    .photobox{
+        padding:25% 5% 5%;
+    }
+    .photobox .centerphoto{
+        width: 80%;
+        height: 60%;
+    }
+    
 }
