--- a/css/detail.css
+++ b/css/detail.css
@@ -8,6 +8,7 @@ section{
     padding:0 5% 70px;
     border-radius: 10px;
     margin-bottom: 50px;
+    max-width: 1000px;
 }
 section .breadcrumb{
     line-height: 70px;
@@ -59,6 +60,7 @@ section .breadcrumb{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    padding: 0 1rem;
 }
 .info .txt h2{
     font-size: 20px;
@@ -104,12 +106,14 @@ background-color: #D0F1A6;
     margin-right: 10px;
 }
 .info .btnchangecolor{
-    width: 100%;
+    width: 160px;
     padding: 10px 0;
     border-radius: 100px;
     border:2px solid #2C6E00;
 }
 .info .btnchangecolortxt i{
+    width: 24px;
+    line-height: 24px;
     color: transparent;
 }
 .info::before{
@@ -207,7 +211,7 @@ background-color: #D0F1A6;
     }
     .detail .row p{
         width: 60%;
-        line-height: 1.2rem;
+        line-height: 1.3rem;
         letter-spacing: 0px;
     }
     .detail .row:last-child{
@@ -238,8 +242,6 @@ background-color: #D0F1A6;
     }
     .detail .row{
         flex-direction: column;
-    }
-    .detail .row{
         align-items: center;
     }
     .detail .row img{
@@ -249,7 +251,7 @@ background-color: #D0F1A6;
     }
     .detail .row p{
         width: 100%;
-        line-height: 1.2rem;
+        line-height: 1.4rem;
         letter-spacing: 0px;
         margin: 1rem 0px;
     }
