--- a/css/about.css
+++ b/css/about.css
@@ -468,8 +468,11 @@ tr td:nth-child(2){
         100%{transform:scale(1.15);
            }
     }
+    .history{
+        width: 90%;
+    }
     .story{
-        width: 95%;
+        max-width:600px ;
         flex-direction: column;
     }
     .story .time{
@@ -487,7 +490,9 @@ tr td:nth-child(2){
         vertical-align: top;
     }
     .story .window{
+        margin: auto;
         width: 100%;
+        height: 100%;
     }
     .time button p{
         width: 4rem;
@@ -495,10 +500,8 @@ tr td:nth-child(2){
         border-radius: 45px;
         line-height: 1.5rem;
     }
-    .window {
-        height: 100%;
-    }
     .window .page{
+        width: 100%;
         background-size: 100% 95%;
     }
     .window .page .txt{
@@ -513,7 +516,7 @@ tr td:nth-child(2){
     }
     .window .page h3{
         max-width: 440px;
-        margin-bottom: 1rem;
+        margin-bottom: 0.5rem;
     }
     .window .page p{
         line-height: 1.3rem;
@@ -528,6 +531,7 @@ tr td:nth-child(2){
         border-radius: 10px;
     }
     .history .block:first-child .txt{
+        padding-right: 2.5rem;
         width: 90%;
         background-color:transparent
     }
@@ -574,6 +578,23 @@ tr td:nth-child(2){
         background: #90B44B;
         border-radius: 4px;
     }
+}
+@media screen and (max-width:580px){
+    .time button img{
+        display: none;
+    }
+    .window .page{
+        border-radius: 10px;
+        background-color: #fff;
+    }
+    .window .page .txt{
+        width: 90%;
+    }
+    .window .page h3{
+        max-width: 440px;
+        margin-bottom: 1rem;
+    }
+    
 }
 @media screen and (max-width:450px){
     .time button img{
