--- a/css/about.css
+++ b/css/about.css
@@ -178,7 +178,7 @@ tr td:nth-child(2){
     box-shadow: 0 0 2px rgba(81, 96, 110, .8);
 }
 .btngroup label i{
-    color: transparent;
+    color: #2C6E00;
     margin-right: 5px;
 }
 .history{
@@ -263,7 +263,8 @@ tr td:nth-child(2){
     justify-content: space-evenly;
     margin-right: 1rem;
 }
-.time button{
+.time span{
+    display: inline-block;
     cursor: pointer;
     height: 80px;
     vertical-align: bottom;
@@ -272,7 +273,8 @@ tr td:nth-child(2){
     background-color: transparent;
 }
 
-.time button p{
+.time span p{
+    text-align: center;
     width: 65%;
     padding: 0 0.5rem;
     display: inline-block;
@@ -283,11 +285,11 @@ tr td:nth-child(2){
     margin-bottom: 15px;
     transition: .2s;
 }
-.time button.click p{
+.time span.click p{
     background-color: #2C6E00;
     color: #fff;
 }
-.time button img{
+.time span img{
     height: 100%;
     width: 35%;
     object-fit: contain;
@@ -433,7 +435,11 @@ tr td:nth-child(2){
     background: #90B44B;
     border-radius: 4px;
 }
-
+@media screen and (hover:hover){
+    .btngroup label i{
+        color: transparent;
+    }
+}
 @media screen and (max-width:768px){
     .price table{
         width: 90%;
@@ -481,12 +487,12 @@ tr td:nth-child(2){
         justify-content: space-between;
         margin: 0;
     }
-    .story .time button{
+    .story .time span{
         width: 25%;
         text-align: center;
         margin-bottom: 1rem;
     }
-    .story .time button img{
+    .story .time span img{
         vertical-align: top;
     }
     .story .window{
@@ -494,7 +500,7 @@ tr td:nth-child(2){
         width: 100%;
         height: 100%;
     }
-    .time button p{
+    .time span p{
         width: 4rem;
         padding: 0.5rem;
         border-radius: 45px;
@@ -580,9 +586,6 @@ tr td:nth-child(2){
     }
 }
 @media screen and (max-width:580px){
-    .time button img{
-        display: none;
-    }
     .window .page{
         border-radius: 10px;
         background-color: #fff;
@@ -596,8 +599,8 @@ tr td:nth-child(2){
     }
     
 }
-@media screen and (max-width:450px){
-    .time button img{
+@media screen and (max-width:460px){
+    .time span img{
         display: none;
     }
 }
