--- a/css/common.css
+++ b/css/common.css
@@ -188,6 +188,7 @@ footer h3{
     transition: .2s;
 }
 .totop{
+    cursor: pointer;
     height: 93px;
     width: 78px;
     position: absolute;
@@ -262,7 +263,7 @@ footer h3{
     right: 0;
     bottom: 20px;
     z-index: 10;
-    cursor: pointer;
+    
 }
 .server label{
     display: block;
@@ -270,6 +271,7 @@ footer h3{
     height:100px;
     background: no-repeat center/100% url("../logo/service.svg")
     ;
+    cursor: pointer;
 }
 .server label{
     text-align: center;
@@ -279,10 +281,10 @@ footer h3{
 }
 .server .talk{
     position: absolute;
-    height: 250px;
-    width: 200px;
+    height: 350px;
+    width: 300px;
     right: 50px;
-    bottom: 80px;
+    bottom: 85px;
     border: 1px solid  #2d7000;
     background-color: #FFFFFF;
     border-radius:20px 20px 0px 20px;
@@ -299,22 +301,29 @@ footer h3{
     line-height: 40px;
     color: #FFFFFF;
 }
-.server .talk input{
-    margin-top: auto; 
-}
 .server .talk .info{
-    height: 180px;
+    height: 275px;
 }
 .server .talk input{
-    width: 100%;
+    font-size: 1.25rem;
+    margin-top: auto; 
+    height: 34px;
+    width: 95%;
     border: none;
     border-top:1px solid #aaa ;
-    padding: 5px 20px;
+    padding: 5px 10px;
     caret-color: #90B44B;
 }
 .server .talk input:focus{
-    outline: none;}
-
+    outline: none;
+}
+.server .talk i{
+    color: #2C6E00;
+    position: absolute;
+    right: 10px;
+    bottom: 5px;
+    font-size: 1.5rem;
+}
 .server input[type="checkbox"]{
     display: none;
 }
@@ -775,6 +784,7 @@ display: none;
         height: 200px;
     }
     .monav.open{
+        top: 0;
         display: -webkit-box;
         display: -ms-flexbox;
         display: flex;
@@ -819,5 +829,9 @@ display: none;
         -webkit-transform:translateX(40px);
             -ms-transform:translateX(40px);
                 transform:translateX(40px)
+    }
+    .server .talk{
+        height: 400px;
+        width: 300px;
     }
 }
