--- a/css/index.css
+++ b/css/index.css
@@ -105,6 +105,7 @@
     bottom: 5%;
     left: 5%;
     box-shadow: 0px 5px 5px rgba(81, 96, 110,.5);
+    text-align: center;
 }
 .wrap .shop i{
     color: #fff;
@@ -578,6 +579,9 @@
 }
 }
 @media screen and (max-width:400px){
+.bar{
+    display: none;
+}
 .item p s{
     display:none;
 } 
