--- a/css/QA.css
+++ b/css/QA.css
@@ -46,7 +46,7 @@ section ul li .ques .fa-quora{
 }
 .ans{
     display: none;
-    padding:10px 20px;
+    padding:0px 20px 10px;
     line-height: 1.5rem;
     background-color: #fff;
     border-radius: 0px 0px 10px 10px;
